welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: ';' expected but 'return' found.
	} return compt}
          ^array667:8: error: Unmatched closing brace '}' ignored here
 }
 ^